# QuantumFuse_Blockchain1

./: .replit  Cargo.toml  Dockerfile  Dockerfile.cargo-audit  Dockerfile.cargo-edit  LICENSE  Makefile  README.md  SECURITY.md  dockerfile  go.mod  main.cpp  package-lock.json  package.json  quantumfuse_blockchain_performance_monitoring_alert.dockerfile  replit.nix  requirements.txt
.cargo/: .global-cache
.cargo/registry/cache/index.crates.io-6f17d22bba15001f/: Inflector-0.11.4.crate  ac-compose-macros-0.18.0.crate  ac-compose-macros-0.3.0.crate  ac-node-api-0.18.0.crate  ac-node-api-0.3.0.crate  ac-primitives-0.18.0.crate  ac-primitives-0.6.0.crate  addr2line-0.22.0.crate  aes-gcm-0.10.3.crate  ahash-0.7.8.crate  ahash-0.8.11.crate  allocator-api2-0.2.18.crate  anstream-0.6.14.crate  anstream-0.6.15.crate  anstyle-1.0.7.crate  anstyle-1.0.8.crate  anstyle-parse-0.2.4.crate  anstyle-parse-0.2.5.crate  anstyle-query-1.1.0.crate  anstyle-query-1.1.1.crate  anyhow-1.0.86.crate  approx-0.5.1.crate  aquamarine-0.5.0.crate  ark-bls12-377-0.4.0.crate  ark-bls12-381-0.4.0.crate  ark-ec-0.4.2.crate  ark-ff-0.4.2.crate  ark-ff-asm-0.4.2.crate  ark-ff-macros-0.4.2.crate  ark-poly-0.4.2.crate  ark-serialize-0.4.2.crate  ark-serialize-derive-0.4.2.crate  ark-std-0.4.0.crate  (+631 more)
.cargo/registry/src/index.crates.io-6f17d22bba15001f/unicase_serde-0.1.0/: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
.cargo/registry/src/index.crates.io-6f17d22bba15001f/unicase_serde-0.1.0/src/: lib.rs
.github/: dependabot.yml  docker-compose.yml
.github/workflows/: ci.yml  codacy.yml  codeql.yml  combine_ci.yml  makefile.yml  njsscan.yml  quantufuse_ci.yml  rust-clippy.yml  rust.yml
Open_API/src/: quantumfuse_blockchain_open_api.yaml
QuantumFuse/: CMakeLists.txt  go.mod  package-lock.json  package.json
QuantumFuse/core/: Cargo.toml
QuantumFuse/core/QuantumFuse/node/: go.mod  go.sum
QuantumFuse/core/QuantumFuse/node/QuantumFuse/api/: api.py  ar_vr_xr.py  auth.py  blockchain.py  cli.py  quanrum_simulator.py  quantum_simulator.py  renwable_energy_system_model.py  requirements.txt  spark.py  user-authentication.py
QuantumFuse/core/QuantumFuse/node/QuantumFuse/frontend/QuantumFuse/frontend/: package.json
QuantumFuse/core/QuantumFuse/node/QuantumFuse/frontend/QuantumFuse/frontend/QuantumFuse/.github/workflows/: quantumfuse_ci.yml
QuantumFuse/core/QuantumFuse/node/QuantumFuse/frontend/QuantumFuse/frontend/src/: app.js  index.html  package-lock.json  package.json
QuantumFuse/core/QuantumFuse/node/QuantumFuse/frontend/quantumfuse-app/: package-lock.json  package.json
QuantumFuse/core/QuantumFuse/node/QuantumFuse/frontend/quantumfuse-app/public/: index.html  manifest.json
QuantumFuse/core/QuantumFuse/node/QuantumFuse/frontend/quantumfuse-app/src/: App.js
QuantumFuse/core/QuantumFuse/node/QuantumFuse/frontend/src/: main.go
QuantumFuse/core/src/: Cargo.toml  fusion.rs  ipfs_api.rs  main.cpp  main.rs  rust-toolchain.toml  smartcontract.rs
QuantumFuse/core/src/core/: advanced_analytics.rs  advanced_simulation_tools_and_visualization_techniques.rs  ai_analytics.rs  ai_monitor.rs  anonymous_credentials.rs  automation.rs  biometric_auth.rs  blockchain.rs  coinbase_api.rs  coinmarketcap_api.rs  community_wallet_mod.rs  counter.rs  cross-chain_communication_and_asset_transfer.rs  cross_chain.rs  cross_platform.rs  dao.rs  data_policy.rs  decentralized_identity.rs  dex.rs  digital_identity.rs  energy_dao.rs  energy_forecast.rs  energy_nft_listing.rs  energy_storage_system.rs  fnft.rs  founder_wallets_mods.rs  fusion_reactor.rs  grid_stability_event.rs  integration.rs  integration_of_quantum-inspired_algorithm.rs  investment.rs  ipfs_api.rs  live_metadata_nft.rs  main.rs  mod.rs  morphic_ui.rs  multi-objective_optimization_algorithm.rs  multiparty.rs  plaid.rs  portfolio.rs  (+18 more)
QuantumFuse/core/src/core/Blockchain/: blockchain.rs
QuantumFuse/core/src/core/dao/: Cargo.toml
QuantumFuse/core/src/core/data_structure/: advanced_analytics.rs  advanced_simulation_tools_and_visualization_techniques.rs  ai_analytics.rs  anonymous_credentials.rs  biometric_auth.rs  coinbase_api.rs  cross_chain.rs  dao.rs  data_policy.rs  decentralized_identity.rs  dex.rs  energy_forecast.rs  grid_stability_event.rs  investment.rs  multi-objective_optimization_algorithm.rs  multiparty.rs  portfolio.rs  real-time_grid_simulation_environment.rs  resilience_scenario.rs  self_sovereign.rs  sgx.rs  social_recovery.rs  substrate.rs  tokenized_incentive_system.rs  version_control_system_for_regulations.rs  yodlee.rs  zk_snark.rs
QuantumFuse/core/src/core/smartcontract/: quantumfuse_smartcontract.rs
QuantumFuse/core/src/core/wallets/: community_wallet_mod.rs  wallet.rs
QuantumFuse/core/src/core/wallets/community/: wallet_main.rs
QuantumFuse/core/src/core/wallets/founder/: founder-wallet.rs
QuantumFuse/core/src/core/web_ui/web_ui/: mod.rs
QuantumFuse/core/src/dao/: energydao.rs
QuantumFuse/core/src/data_structure/: cross-chain_communication_and_asset_transfer.rs  energy_nft_listing.rs  energy_storage_system.rs  multi-objective_optimization_algorithm.rs  reputation_system.rs  sustainability_token.rs
QuantumFuse/core/src/live_metada/: nft.rs
QuantumFuse/core/src/live_metada/fnft/: fnft.rs
QuantumFuse/core/src/marketplace/: quantumfuse_marketplace.rs
QuantumFuse/core/src/smartcontract/: sustainable_energy_smartcontract.rs
QuantumFuse/core/src/wallets/founder/: wallet_main.rs
dependencies/: package.json
src/: quantumfuse_blockchaim_sdk.md  quantumfuse_blockchain_analytic_reporting.py  quantumfuse_blockchain_app.js  quantumfuse_blockchain_ar-vr-xr.py  quantumfuse_blockchain_decentralized_storage.rust  quantumfuse_blockchain_developer_experience.py  quantumfuse_blockchain_enhanced_smartcontract.rs  quantumfuse_blockchain_node_ipfs.go  quantumfuse_blockchain_project_structure.css  quantumfuse_blockchain_quatum_simulator.py  quantumfuse_blockchain_react.js  quantumfuse_blockchain_renewable_rnergy_system_model.py  quantumfuse_blockchain_smartcontract_development.sol  quantumfuse_blockchain_user_authentication.py
(+854 files in other folders)
