[package]
name = "quantum_fuse_blockchain"
version = "0.1.0"
edition = "2021"
authors = ["Jacque Antoine DeGraff <jacquedegraff@creodamo.com>"]
description = "A quantum-inspired blockchain project with advanced energy management, DAO features, and quantum computing."

[dependencies]
# Core dependencies
cargo = "0.82.0"
cargo-hack = "0.6.31"
cargo-make = "0.37.16"
serde = { version = "1.0.209", features = ["derive", "std"] }
serde_json = "1.0.127"
thiserror = "1.0.63"
anyhow = "1.0"
futures = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = "0.3"
tokio = { version = "1.40.0", features = ["full"] }
async-trait = "0.1"

# Cryptography and Blockchain
sha2 = "0.10.8"
ed25519-dalek = "2.1.1"
ring = "0.17.8"
rand = "0.8.5"
bs58 = "0.5.1"
pqcrypto = "0.17.0"
schnorrkel = "0.11.4"
libp2p = { version = "0.49.0", features = ["tcp-tokio", "dns-tokio"] }
substrate-api-client = "0.18.0"
sp-runtime = "37.0.0"
sp-std = "14.0.0"
sp-core = "34.0.0"
frame-system = "37.1.0"
frame-support = "37.0.0"

# Web and APIs
reqwest = "0.12.7"
rocket = "0.5.0"
rocket_okapi = "0.8.0"
rocket_cors = "0.6.0"
juniper = "0.16.1"
juniper_rocket = "0.9.0"
jsonwebtoken = "9.3.0"
ipfs-api = "0.17.0"

# Quantum Computing Simulation
qip = "0.15"
zk_evm = "0.150.4"
zkp = "0.8.0"
quantum = "0.1.2"

# DAO and Voting
pallet-democracy = "4.0.0-dev"

# Energy Management
num = "0.4"

# Secure Secret Sharing
secret_sharing = "0.2.0"

# NFT-related dependencies
ethabi = "18.0"
protoc-rust = "2.28.0"

# CLI Argument Parsing
structopt = "0.3.26"

# File I/O for wallet storage
fs_extra = "1.3.0"

# Data and Storage Handling
hashbrown = "0.14.5"
redis = "0.26.1"

# Other utilities
log = "0.4.22"
env_logger = "0.11.5"
anstream = "0.6.15"
regex = "1.10.6"
time = "0.3.36"
openssl-probe = "0.1.5"
hex = "0.4.3"
orx-split-vec = "3.7.0"
coins-bip32 = "0.12.0"
smoldot = "0.18.0"
derivation-path = "0.2.0"

# Wasm dependencies (optional)
wasm-bindgen = { version = "0.2", optional = true }
wasm-instrument = "0.4.0"

# SGX dependencies
sgx_types = "1.1.1"
sgx_urts = "1.1.1"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.3"

[build-dependencies]
prost-build = "0.9"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[features]
default = ["std"]
std = ["wasm-instrument/std", "serde/std", "tokio/full"]
wasm = ["wasm-bindgen"] # Use wasm-bindgen for Wasm support

[lib]
name = "quantum_fuse_lib"
path = "src/lib.rs"

[[bin]]
name = "quantum_fuse_blockchain"
path = "src/main.rs"

[[bin]]
name = "setup_fusion_reactor"
path = "src/bin/setup_fusion_reactor.rs"

[[bin]]
name = "setup_nft_contracts"
path = "src/bin/setup_nft_contracts.rs"

[[bin]]
name = "setup_marketplace"
path = "src/bin/setup_marketplace.rs"

[[bin]]
name = "setup_quantum_optimizer"
path = "src/bin/setup_quantum_optimizer.rs"
