[package]
name = "quantum_fuse_blockchain"
version = "0.1.0"
edition = "2021"
authors = ["Jacque Antoine DeGraff <jacquedegraff@creodamo.com>"]
description = "A quantum-inspired blockchain project with advanced energy management, DAO features, and quantum computing."

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
orx-split-vec = "=3.8.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
anyhow = "1.0"
futures = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = "0.3"
async-trait = "0.1"
sgx_enclave = "1.1.1"
sgx_types = "1.1.1"
sgx_urts = "1.1.1"
spawn-nft = "0.1.0"
fusion_reactor = "0.1"
cw721-marketplace-permissioned = "0.1.6"
blockchain = "=0.9.2"
blockchain_maker = "1.1.0"
cryptoapis = "1.7.0"
wallet = "0.1.0"
ipfs-api = "0.17.0"
quantum = "0.1.2"
qip = "0.15"
zk_evm = "0.150.4"
zkp = "0.8.0"
dao-voting-token-staked = "2.4.2"
pallet-democracy = "4.0.0-dev"
reqwest = "0.12.7"
rocket = "0.5.0"
rocket_okapi = "0.8.0"
rocket_cors = "0.6.0"
juniper = "0.16.1"
juniper_rocket = "0.9.0"
jsonwebtoken = "9.3.0"
sha2 = "0.10.8"
ed25519-dalek = "2.1.1"
ring = "0.17.8"
rand = "0.8.5"
bs58 = "0.5.1"
pqcrypto = "0.17.0"
num = "0.4"
secret_sharing = "0.2.0"
ethabi = "18.0"
protoc-rust = "2.28.0"
structopt = "0.3.26"
fs_extra = "1.3.0"
hashbrown = "0.14.5"
redis = "0.26.1"
log = "0.4.22"
env_logger = "0.11.5"
anstream = "0.6.15"
regex = "1.10.6"
time = "0.3.36"
openssl-probe = "0.1.5"
hex = "0.4.3"
cargo = "0.82.0"
orx-split-vec = "3.7.0"
coins-bip32 = "0.12.0"
smoldot = "0.18.0"
derivation-path = "0.2.0"
wasm-bindgen = { version = "0.2", optional = true }
wasm-instrument = "0.4.0"


[build-dependencies]
prost-build = "0.9"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[[bin]]
name = "quantum_fuse_blockchain"
path = "src/main.rs"

[lib]
name = "quantum_fuse_blockchain_lib"
path = "src/lib.rs"
