[package]
name = "quantum_fuse_blockchain"
version = "0.1.0"
edition = "2021"
authors = ["Jacque Antoine DeGraff <jacquedegraff@creodamo.com>"]
description = "A quantum-inspired blockchain project with advanced energy management, DAO features, and quantum computing."

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
orx-split-vec = "=3.8.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sgx_enclave = "0.1"
nft = "0.1"
fusion_reactor = "0.1"
marketplace = "0.1"
blockchain = "0.1"
wallet = "0.1"
ipfs-api = "0.9"
quantum_optimizer = "0.1"
dao = "0.1"

[[bin]]
name = "quantum_fuse_blockchain"
path = "src/main.rs"

[lib]
name = "quantum_fuse_blockchain_lib"
path = "src/lib.rs"
EOL
