[package]
name = "unicase_serde"
version = "0.1.0"
authors = ["Yong Wen Chua <me@yongwen.xyz>"]
license = "MIT/Apache-2.0"
description = "serde Serialization and Deserialization for UniCase crate"
homepage = "https://github.com/lawliet89/unicase_serde"
repository = "https://github.com/lawliet89/unicase_serde"
documentation = "https://docs.rs/unicase_serde/"
keywords = ["lowercase", "case", "case-insensitive", "serde"]

[dependencies]
serde = "1.0"
unicase="2.0"

[dev-dependencies]
serde_derive = "1.0"
serde_test = "1.0"
